Enigma/testing/error/wrongsequence.inp
* B BETA I II III (BC) (DE) AAAA
JFIDSOJFOSJD